# tcg_marketplace_core

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
marketplace/: .env  Cargo.toml  sqlx-data.json
marketplace/src/: lib.rs
